delete trash comment from main
