# docs/swagger.json
@@ -54,17 +54,6 @@
                     "user"
                 ],
                 "summary": "getProfile of the current user",
-                "parameters": [
-                    {
-                        "description": "put token and pass to  gin.Context",
-                        "name": "token_in_ginContext",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -89,15 +78,6 @@
                 ],
                 "summary": "updateProfile of the current user",
                 "parameters": [
-                    {
-                        "description": "put token and pass to  gin.Context",
-                        "name": "token_in_ginContext",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
                     {
                         "description": "put profile input json and pass to  gin.Context",
                         "name": "json_in_ginContext",
@@ -131,17 +111,6 @@
                     "user"
                 ],
                 "summary": "get the current user's username",
-                "parameters": [
-                    {
-                        "description": "put token and pass to  gin.Context",
-                        "name": "token_in_ginContext",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
